chore: add env id and clean up auth client
